--- a/project.html
+++ b/project.html
@@ -3,16 +3,206 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <style>
+      body {
+        background: #f9f7fe;
+        font-family: "Roboto", sans-serif;
+      }
+
+      .weather-app {
+        background: white;
+        max-width: 600px;
+        margin: 60px auto;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+      }
+
+      header {
+        border-bottom: 1px solid #f9f7fe;
+        padding-bottom: 30px;
+      }
+
+      .search-input {
+        background-color: #f9f7fe;
+        border: none;
+        color: rgba(39, 33, 66, 0.4);
+        font-size: 16px;
+        padding: 20px;
+        width: 75%;
+        border-radius: 6px;
+      }
+
+      .search-button {
+        margin-left: 5px;
+        font-size: 16px;
+        background-color: #885df1;
+        color: white;
+        border: none;
+        padding: 20px;
+        line-height: 1;
+        border-radius: 5px;
+      }
+
+      main {
+        padding: 30px 0;
+      }
+
+      .current-temperature {
+        font-size: 48px;
+      }
+
+      .current-weather {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .current-city {
+        font-size: 38px;
+        font-weight: 900;
+        margin: 0;
+      }
+
+      .current-details {
+        color: rgba(39, 33, 66, 0.4);
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+      }
+
+      .current-details strong {
+        color: #f65282;
+      }
+
+      .current-temperature-icon {
+        position: relative;
+        top: -8px;
+        font-size: 40px;
+        margin-right: 10px;
+      }
+
+      .current-temperature-value {
+        font-size: 80px;
+        font-weight: bold;
+      }
+
+      .current-temperature-unit {
+        font-size: 28px;
+        position: relative;
+        top: -38px;
+      }
+
+      footer {
+        border-top: 1px solid #f9f7fe;
+        text-align: center;
+        padding-top: 15px;
+        color: rgba(39, 33, 66, 0.4);
+      }
+    </style>
   </head>
   <body>
-    <h1>
-      hosting with
-      <a
-        href="https://app.netlify.com/projects/zippy-meringue-f8a80a/deploys/68382526441fb0bed1141919"
-      >
-        netlify</a
-      >
-    </h1>
+    <div class="weather-app">
+      <header>
+        <form id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-input"
+            id="search-input"
+          />
+          <input type="submit" value="Search" class="search-button" />
+        </form>
+      </header>
+      <main>
+        <div class="current-weather">
+          <div>
+            <h1 class="current-city" id="current-city">Paris</h1>
+            <p class="current-details">
+              <span id="current-date"></span>, moderate rain <br />
+              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+            </p>
+          </div>
+          <div class="current-temperature">
+            <span class="current-temperature-icon">☀️</span>
+            <span class="current-temperature-value" id="current-temperature"
+              >24</span
+            >
+            <span class="current-temperature-unit">°C</span>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <p>
+          This project was coded by
+          <a href="#" target="_blank">Your Name</a> and is
+          <a href="#" target="_blank">on GitHub</a> and
+          <a href="#" target="_blank">hosted on Netlify</a>.
+        </p>
+      </footer>
+    </div>
+
+    <script>
+      function displayTemperature(response) {
+        let temperatureElement = document.querySelector("#current-temperature");
+        let temperature = Math.round(response.data.temperature.current);
+        let cityElement = document.querySelector("#current-city");
+        cityElement.innerHTML = response.data.city;
+        temperatureElement.innerHTML = temperature;
+      }
+
+      function search(event) {
+        event.preventDefault();
+        let searchInputElement = document.querySelector("#search-input");
+        let city = searchInputElement.value;
+
+        let apiKey = "b2a5adcct04b33178913oc335f405433";
+        let apiUrl = `https://api.shecodes.io/weather/v1/current?query=${city}&key=${apiKey}&units=metric`;
+
+        axios.get(apiUrl).then(displayTemperature);
+      }
+
+      function formatDate(date) {
+        let minutes = date.getMinutes();
+        let hours = date.getHours();
+        let day = date.getDay();
+
+        if (minutes < 10) {
+          minutes = `0${minutes}`;
+        }
+
+        if (hours < 10) {
+          hours = `0${hours}`;
+        }
+
+        let days = [
+          "Sunday",
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+        ];
+
+        let formattedDay = days[day];
+        return `${formattedDay} ${hours}:${minutes}`;
+      }
+
+      let searchForm = document.querySelector("#search-form");
+      searchForm.addEventListener("submit", search);
+
+      let currentDateElement = document.querySelector("#current-date");
+      let currentDate = new Date();
+
+      currentDateElement.innerHTML = formatDate(currentDate);
+    </script>
   </body>
 </html>
